--- a/live_view_studio/lib/live_view_studio_web/live/donations_live.html.heex
+++ b/live_view_studio/lib/live_view_studio_web/live/donations_live.html.heex
@@ -1,5 +1,5 @@
 <h1>Food Bank Donations</h1>
-<div id="donations">
+<div id="donations" phx-window-keyup="update" phx-throttle="300">
   <form phx-change="select-per-page">
     <select name="per-page">
       <%= Phoenix.HTML.Form.options_for_select(
