--- a/live_view_studio/lib/live_view_studio_web/live/light_live.html.heex
+++ b/live_view_studio/lib/live_view_studio_web/live/light_live.html.heex
@@ -1,5 +1,5 @@
 <h1>Focus Light Render</h1>
-<div id="light">
+<div id="light" phx-window-keyup="update">
   <div class="meter">
     <span style={"width: #{@brightness}%; background-color: #{temp_color(@temp)}"}><%= assigns.brightness %>%</span>
   </div>
